--- a/BERT_QA.ipynb
+++ b/BERT_QA.ipynb
@@ -7,6 +7,7 @@
    "outputs": [],
    "source": [
     "#!pip install transformers\n",
+    "#Import libraries. pip install if library does not exist in your environment\n",
     "from transformers import BertForQuestionAnswering\n",
     "from transformers import BertTokenizer\n",
     "tokenizer = BertTokenizer.from_pretrained('bert-large-uncased-whole-word-masking-finetuned-squad')\n",
@@ -27,41 +28,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(14, 14, 7.01, 6.98, 'california')"
+       "(17, 17, 5.72, 6.34, 'california')"
       ]
      },
-     "execution_count": 103,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "def gvse_answering_machine ( question, passage, max_len =  512):\n",
+    "def bert_answering_machine ( question, passage, max_len =  512):\n",
     "    ''' Function to provide answer from passage for question asked.\n",
-    "        This function takes question and passage and retuns answer, along with start/end index and start/end token scores\n",
-    "        These scores can be used to rank answers if we are searching answers for same passsage in multiple passages\n",
+    "        This function takes question as well as the passage \n",
+    "        It retuns answer from the passage, along with start/end token index for the answer and start/end token scores\n",
+    "        The scores can be used to rank answers if we are searching answers for same question in multiple passages\n",
+    "        Value of maxlen can not exceed 512. If length of question + passage + special tokens is bigger than maxlen, function will truncate extra portion.\n",
     "        \n",
     "    '''\n",
-    " \n",
-    "    \n",
+    "  \n",
+    "    #Tokenize input question and passage\n",
     "    input_ids = tokenizer.encode ( question, passage,  max_length= max_len, truncation=True)  # Tokenizing question and answer\n",
     "    \n",
+    "    #Getting number of tokens in 1st sentence (question) and 2nd sentence (passage)\n",
     "    cls_index = input_ids.index(102) #Getting index of first CLS token\n",
-    "    \n",
     "    len_question = cls_index + 1       # length of question (1st sentence)\n",
     "    len_answer = len(input_ids)- len_question  # length of answer (2nd sentence)\n",
     "    \n",
     "    \n",
-    "    \n",
-    "    #Segment Ids\n",
+    "    #BERT need Segment Ids to understand which tokens belong to sentence 1 and which to sentence 2\n",
     "    segment_ids =  [0]*len_question + [1]*(len_answer)  #Segment ids will be 0 for question and 1 for answers\n",
     "    \n",
+    "    #Converting token ids to tokens\n",
     "    tokens = tokenizer.convert_ids_to_tokens(input_ids) \n",
     "    \n",
     "    \n",
@@ -81,7 +84,7 @@
     "    end_score = np.round(end_scores[answer_end_index], 2)\n",
     "    \n",
     "   \n",
-    "    #Combining subwords starting with ## so that we can see fullwords in output. Note tokenizer breaks words not in its vocab\n",
+    "    #Combining subwords starting with ## so that we can see fullwords in output. Note tokenizer breaks words not in its vocab.\n",
     "    answer = tokens[answer_start_index]\n",
     "    for i in range(answer_start_index + 1, answer_end_index + 1):\n",
     "        if tokens[i][0:2] == '##':\n",
@@ -96,13 +99,13 @@
     "    return ( answer_start_index, answer_end_index, start_score, end_score,  answer)\n",
     "\n",
     "\n",
-    "#Test\n",
-    "gvse_answering_machine ('Which state john lives', 'My name is John. I live in California')\n"
+    "#Testing function\n",
+    "bert_answering_machine ('Which state john lives', 'My name is John. I live in San Jose, California. I am learning BERT')\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -110,7 +113,7 @@
      "output_type": "stream",
      "text": [
       "Passage:\n",
-      " John is a 10 years old boy. He is son of Robert Smith.  Elizabeth Davis is Robert's wife. Sophia Smith is Elizabeth's daughter. She studies at UC Davis\n",
+      " John is a 10 years old boy. He is the son of Robert Smith.  Elizabeth Davis is Robert's wife. Sophia Smith is Elizabeth's daughter. She studies at UC Davis\n",
       "\n",
       "Question:\n",
       " Who is John's sister\n",
@@ -119,7 +122,7 @@
       "\n",
       "\n",
       "Question:\n",
-      " Which collge does John's sister attend\n",
+      " Which college does John's sister attend\n",
       "\n",
       "Answer from BERT:  uc davis \n",
       "\n"
@@ -127,8 +130,7 @@
     }
    ],
    "source": [
-    "passage=\"John is a 10 years old boy. He is son of Robert Smith.  Elizabeth Davis is Robert's wife. Sophia Smith is Elizabeth's daughter. She studies at UC Davis\"\n",
-    "\n",
+    "passage=\"John is a 10 years old boy. He is the son of Robert Smith.  Elizabeth Davis is Robert's wife. Sophia Smith is Elizabeth's daughter. She studies at UC Davis\"\n",
     "\n",
     "\n",
     "print('Passage:\\n', passage )\n",
@@ -136,20 +138,20 @@
     "question1 =\"Who is John's sister\"\n",
     "print ('\\nQuestion:\\n', question1)\n",
     "#Getting answer from BERT\n",
-    "_, _ , _ , _, ans  = gvse_answering_machine ( question1, passage)\n",
+    "_, _ , _ , _, ans  = bert_answering_machine ( question1, passage)\n",
     "print('\\nAnswer from BERT: ', ans ,  '\\n')\n",
     "\n",
     "\n",
-    "question2 =\"Which collge does John's sister attend\"\n",
+    "question2 =\"Which college does John's sister attend\"\n",
     "print ('\\nQuestion:\\n', question2)\n",
     "#Getting answer from BERT\n",
-    "_, _ , _ , _, ans  = gvse_answering_machine ( question2, passage)\n",
+    "_, _ , _ , _, ans  = bert_answering_machine ( question2, passage)\n",
     "print('\\nAnswer from BERT: ', ans ,  '\\n')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -181,20 +183,20 @@
     "question1 =\"Which 2 teams are part of the game\"\n",
     "print ('\\nQuestion:\\n', question1)\n",
     "#Getting answer from BERT\n",
-    "_, _ , _ , _, ans  = gvse_answering_machine ( question1, passage)\n",
+    "_, _ , _ , _, ans  = bert_answering_machine ( question1, passage)\n",
     "print('\\nAnswer from BERT: ', ans ,  '\\n')\n",
     "\n",
     "\n",
     "question2 =\"How many got infected with Coronavirus\"\n",
     "print ('\\nQuestion:\\n', question2)\n",
     "#Getting answer from BERT\n",
-    "_, _ , _ , _, ans  = gvse_answering_machine ( question2, passage)\n",
+    "_, _ , _ , _, ans  = bert_answering_machine ( question2, passage)\n",
     "print('\\nAnswer from BERT: ', ans ,  '\\n')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -228,20 +230,20 @@
     "question1 =\"When we have Independence Day\"\n",
     "print ('\\nQuestion:\\n', question1)\n",
     "#Getting answer from BERT\n",
-    "_, _ , _ , _, ans  = gvse_answering_machine ( question1, passage)\n",
+    "_, _ , _ , _, ans  = bert_answering_machine ( question1, passage)\n",
     "print('\\nAnswer from BERT: ', ans ,  '\\n')\n",
     "\n",
     "question2 =\"What's issue in voting for Apple employees\"\n",
     "print ('\\nQuestion:\\n', question2)\n",
     "#Getting answer from BERT\n",
-    "_, _ , _ , _, ans  = gvse_answering_machine ( question2, passage)\n",
+    "_, _ , _ , _, ans  = bert_answering_machine ( question2, passage)\n",
     "print('\\nAnswer from BERT: ', ans ,  '\\n')\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -282,21 +284,28 @@
     "question1 =\"Which is first film of Sushant\"\n",
     "print ('\\nQuestion:\\n', question1)\n",
     "#Getting answer from BERT\n",
-    "_, _ , _ , _, ans  = gvse_answering_machine ( question1, passage)\n",
+    "_, _ , _ , _, ans  = bert_answering_machine ( question1, passage)\n",
     "print('\\nAnswer from BERT: ', ans ,  '\\n')\n",
     "\n",
     "question2 =\"Which film Sushant got award\"\n",
     "print ('\\nQuestion:\\n', question2)\n",
     "#Getting answer from BERT\n",
-    "_, _ , _ , _, ans  = gvse_answering_machine ( question2, passage)\n",
+    "_, _ , _ , _, ans  = bert_answering_machine ( question2, passage)\n",
     "print('\\nAnswer from BERT: ', ans ,  '\\n')\n",
     "\n",
     "question3 =\"Who supported Sushant\"\n",
     "print ('\\nQuestion:\\n', question3)\n",
     "#Getting answer from BERT\n",
-    "_, _ , _ , _, ans  = gvse_answering_machine ( question3, passage)\n",
+    "_, _ , _ , _, ans  = bert_answering_machine ( question3, passage)\n",
     "print('\\nAnswer from BERT: ', ans ,  '\\n')\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
