--- a/BERT_QA-From_Multiple_Texts.ipynb
+++ b/BERT_QA-From_Multiple_Texts.ipynb
@@ -166,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -177,7 +177,7 @@
       "\n",
       "Passage: 1 : John is a 10 year old boy. He is the son of Robert Smith.  Elizabeth Davis is Robert's wife. She teaches at UC Berkeley. Sophia Smith is Elizabeth's daughter. She studies at UC Davis\n",
       "\n",
-      "Passage: 2 : My name is John. I live in San Jose, California. Rob is my friend. He lives in Seattle, Washington\n",
+      "Passage: 2 : My name is John. I live in San Jose, California. Rob is my friend. He lives in Seattle, Washington, My sister is Kelly. \n",
       "\n",
       "Answer: uc davis , Passage Index Where Answer Was Found: 1, Scores: 5.83 and 6.35\n"
      ]
@@ -187,7 +187,7 @@
     "# passing 3 pagges and get_answer gets the  answer from best passege\n",
     "passages_array=[\"I am a student , I study in UC Davis. I like to play Tennis\",\n",
     "    \"John is a 10 year old boy. He is the son of Robert Smith.  Elizabeth Davis is Robert's wife. She teaches at UC Berkeley. Sophia Smith is Elizabeth's daughter. She studies at UC Davis\", \n",
-    " \"My name is John. I live in San Jose, California. Rob is my friend. He lives in Seattle, Washington\" ]\n",
+    " \"My name is John. I live in San Jose, California. Rob is my friend. He lives in Seattle, Washington, My sister is Kelly. \" ]\n",
     "\n",
     "for i in range(len(passages_array)):\n",
     "    print (f'Passage: {i} : {passages_array[i]}\\n')\n",
